[package]
name = "stonehm"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["examples/hello_world"]

[dependencies]
axum = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
openapiv3 = "2.0"
schemars = { version = "0.8", features = ["preserve_order"] }
tower = "0.5"
tower-service = "0.3"
http = "1.0"
inventory = "0.3"
indexmap = "2.0"
# Re-export proc macros via this module
stonehm-macros = { path = "macros" }
