[package]
name = "stonehm"
version = "0.1.0"
edition = "2021"
description = "Automatic OpenAPI 3.0 generation for Axum applications"
license = "MIT"
repository = "https://github.com/yourusername/stonehm"
keywords = ["openapi", "axum", "api", "documentation", "swagger"]
categories = ["web-programming", "api-bindings"]

[workspace]
members = ["examples/hello_world", "stonehm-macros"]

[dependencies]
axum = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
openapiv3 = "2.0"
schemars = { version = "0.8", features = ["preserve_order"] }
tower = "0.5"
tower-service = "0.3"
http = "1.0"
inventory = "0.3"
indexmap = "2.0"
# Re-export proc macros from separate crate
# For local development, use path dependency
# For publishing, switch to: stonehm-macros = "0.1.0"
stonehm-macros = { version = "0.1.0", path = "stonehm-macros" }
