[package]
name = "stonehm-macros"
version = "0.1.0"
edition = "2021"
description = "Proc macros for stonehm - automatic OpenAPI generation"
license = "MIT"
repository = "https://github.com/yourusername/stonehm"
keywords = ["openapi", "axum", "api", "documentation", "macros"]
categories = ["web-programming", "api-bindings"]

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"
serde_json = "1.0"
